# Task_CAIR

./: .gitignore  README.md  model_download.py  pyproject.toml  requirements.txt  test.ipynb
src/: dataset_loader.py  define_llm.py  huatu.py  main.py  metrics.py  prompt.py
src/evaluator/: plotting.py  scoring.py
