[project]
name = "task-cair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.14.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "transformers>=4.57.3",
    "vllm==0.10.0",
    "huggingface-hub>=0.33.0",
    "seaborn>=0.13.2",
    "pexpect>=4.9.0",
]
